--- a/fr/heuzef_cv_fr.tex
+++ b/fr/heuzef_cv_fr.tex
@@ -113,6 +113,8 @@ Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-
 
 \cvachievement{\faCertificate}{Chinois A1}{CCI Cognac (Lilate), 2023}
 
+\cvachievement{\faCertificate}{CCNA1}{CISCO, 2013}
+
 \cvachievement{\faCertificate}{Designer Graphiste}{Lignes et Formations, 2011}
 
 \cvachievement{\faCertificate}{PSC1}{Croix-Rouge, 2005/2008/2012/2022}
@@ -211,23 +213,24 @@ Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-
 \columnratio{0.5}
 \begin{paracol}{2}
 
-\cvevent{Technicien supérieur IT}{Firewall-Services}{2013 -- 2023}{Bordeaux}
+\cvevent{Technicien supérieur IT}{Firewall-Services}{2013 -- 2023}{Télétravail}
 \begin{itemize}
-\item ESN spécialisée en sécurité et logiciel libre.
-\item Gestionnaire de parcs et réseaux informatique.
-\item lorem ipsum dolor sit amet
-\item lorem ipsum dolor sit amet
-\item lorem ipsum dolor sit amet
-\item lorem ipsum dolor sit amet
-\item lorem ipsum dolor sit amet
-\item lorem ipsum dolor sit amet
-\item lorem ipsum dolor sit amet
-\item lorem ipsum dolor sit amet
+\item ESN spécialisée en sécurité et en logiciels libres.
+\item Maintenance d’une dizaine de parcs informatiques.
+\item Maintenance en salle serveur et ZRR.
+\item Assistance et formations proactives auprès des clients.
+\item Supervision des infrastructures IT.
+\item Rédaction de rapports et documentations technique.
+\item Optimisation continue des procédures internes.
+\item Analyse fonctionnelle des besoins et analyses RCA.
+\item Accompagnement des équipes.
+\item Résolution des situations de crise et d’urgence.
+
 \end{itemize}
 
 \divider
 
-\cvevent{Freelance}{Heuzef}{2012 -- 2016}{Bordeaux}
+\cvevent{Freelance}{Heuzef}{2012 -- 2016}{Télétravail}
 \begin{itemize}
 \item Auto-entrepreneur
 \item Services IT, développement web et graphisme.
@@ -235,9 +238,9 @@ Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-
 
 \divider
 
-\cvevent{CEMÉA Aquitaine}{Technicien IT}{2011 -- 2011}{Bordeaux}
+\cvevent{CEMÉA Aquitaine}{Technicien IT}{2011 -- 2011}{Télétravail}
 \begin{itemize}
-\item Responsable informatique en Service Civique.
+\item Responsable SI en Service Civique.
 \item Assistance et formation pédagogique et andragogique.
 \end{itemize}
 
@@ -286,10 +289,10 @@ Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-
 
 \begin{itemize}
 \item Aïkidoka
-\item Fab-manager
+\item FabLab-Manager
 \item Bricoleur
 \switchcolumn
-\item Auto-hébergement
+\item Auto-hébergeur
 \item Libriste
 \item Papa poule
 \end{itemize}
