Update with my sisters advices

--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -124,7 +124,7 @@ My ability to play a facilitator role between different experts allows me to cre
 
 \divider
 
-\cvachievement{\faFlag}{English}{Not too much :P}
+\cvachievement{\faFlag}{English}{Business}
 
 \divider
 
@@ -293,7 +293,7 @@ My ability to play a facilitator role between different experts allows me to cre
 \switchcolumn
 \item Self-hoster
 \item Computer libertarian
-\item Loving Daddy
+\item Family
 \end{itemize}
 
 \end{paracol}
