--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -294,7 +294,7 @@ Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-
 \switchcolumn
 \item Auto-hébergeur
 \item Libriste
-\item Papa poule
+\item Familial
 \end{itemize}
 
 \end{paracol}
