Update birthday and english level

--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -61,7 +61,7 @@
 %\photoL{4cm}{heuzef_2025_portrait_min}
 
 \personalinfo{
-  \printinfo{\faCalendar}{05/07/1990}
+  \printinfo{\faCalendar}{1990}
   \location{Bordeaux, France}
   \email{contact@heuzef.com}
   \phone{+33(0)6 31 32 66 54}
@@ -100,8 +100,7 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 
 \cvachievement{\faGraduationCap}{Gestionnaire en Maintenance et Support Informatique}{CESI, RNCP 34602 Niveau 5, 2015}
 
-\cvachievement{\faGraduationCap}{
-Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-Informatique, RNCP5918 Niveau 5, 2013}
+\cvachievement{\faGraduationCap}{Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-Informatique, RNCP5918 Niveau 5, 2013}
 
 \cvachievement{\faGraduationCap}{Conseiller et Assistant en Technologies de l'Information de de la Communication}{AFPA, RNCP4537 Niveau 4, 2011}
 
@@ -125,7 +124,7 @@ Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-
 
 \divider
 
-\cvachievement{\faFlag}{Anglais}{Professionnel}
+\cvachievement{\faFlag}{Anglais}{B2}
 
 \divider
 
