--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -61,7 +61,7 @@
 %\photoL{4cm}{heuzef_2025_portrait_min}
 
 \personalinfo{
-  \printinfo{\faCalendar}{05/07/1990}
+  \printinfo{\faCalendar}{1990}
   \location{Bordeaux, France}
   \email{contact@heuzef.com}
   \phone{+33(0)6 31 32 66 54}
@@ -124,7 +124,7 @@ My ability to play a facilitator role between different experts allows me to cre
 
 \divider
 
-\cvachievement{\faFlag}{English}{Business}
+\cvachievement{\faFlag}{English}{B2}
 
 \divider
 
