--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -56,7 +56,7 @@
 \begin{document}
 
 \name{Heuze Florent}
-\tagline{Chef de projet en Intelligence Artificielle}
+\tagline{Chef de projet IT}
 \photoL{6cm}{heuzef_2025_01}
 %\photoL{4cm}{heuzef_2025_portrait_min}
 
@@ -94,9 +94,10 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 
 \begin{paracol}{2}
 
-\cvsection{Homologations}
+\cvsection{Qualifications}
 
-\cvachievement{\faGraduationCap}{Machine Learning Engineer}{Datascientest, RNCP 36129 Niveau 7, 2025}
+\cvachievement{\faGraduationCap}{Chef de projet en Intelligence Artificielle}{Datascientest, RNCP 36129 Niveau 7, 2025.\linebreak
+(Datascientist, MLOPS, Data Product Manager)}
 
 \cvachievement{\faGraduationCap}{Gestionnaire en Maintenance et Support Informatique}{CESI, RNCP 34602 Niveau 5, 2015}
 
@@ -115,8 +116,6 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 \cvachievement{\faCertificate}{CCNA1}{CISCO, 2013}
 
 \cvachievement{\faCertificate}{Designer Graphiste}{Lignes et Formations, 2011}
-
-\cvachievement{\faCertificate}{PSC1}{Croix-Rouge, 2005/2008/2012/2022}
 
 \cvsection{Langues}
 
@@ -142,21 +141,19 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 \\
 \divider
 
-\cvtag{AI {\color{black}\faBrain}}
-\cvtag{Machine Learning {\color{GoldenMetallic}\faUserCog}}
-\cvtag{Deep Learning {\color{GoldenMetallic}\faUserCog}}\\
 \cvtag{Python {\color{ForestGreen}\faPython}}
-\cvtag{MLFlow {\color{cyan}\faSync*}}
-\cvtag{BentoML {\color{SlateGrey}\faLayerGroup}}
+\cvtag{IA/ML/DL {\color{GoldenMetallic}\faBrain}}
+\cvtag{MLOPS {\color{cyan}\faSync*}}
 \\
 \divider
 
-\cvtag{Data {\color{black}\faDatabase}}
-\cvtag{(No)SQL {\color{SlateGrey}\faCode}}
+\cvtag{(No)SQL {\color{SlateGrey}\faDatabase}}
 \cvtag{ETL {\color{SlateGrey}\faFileDownload}}
-\cvtag{API {\color{EgyptianBlue}\faPlug}}
-\cvtag{Scraping {\color{EgyptianBlue}\faSearch}}
 \cvtag{Data Viz {\color{Carmine}\faChartPie}}
+\\
+\cvtag{Scraping {\color{EgyptianBlue}\faSearch}}
+\cvtag{API {\color{EgyptianBlue}\faPlug}}
+\\
 \cvtag{RGPD {\color{EgyptianBlue}\faGlobeEurope}}
 \cvtag{AI Act {\color{GoldenMetallic}\faBalanceScale}}
 \\
@@ -165,9 +162,7 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 \cvtag{DevSecOps {\color{black}\faLinux}}
 \cvtag{Git/DVC {\color{EngineeringOrange}\faCodeBranch}}\\
 \cvtag{Conteneurisation {\color{EgyptianBlue}\faDocker}}
-\cvtag{Orchestration {\color{Carmine}\faBoxes}}\\
-\cvtag{Jenkins {\color{EngineeringOrange}\faJenkins}}
-\cvtag{Airflow {\color{DodgerBlue}\faFan}}
+\cvtag{Orchestration {\color{Carmine}\faBoxes}}
 \\
 \divider
 
@@ -207,10 +202,13 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
     \includegraphics[width=1\linewidth]{heuzef_2025_02.jpg}
 \end{figure}
 
-\cvsection{Expériences}
+\bigskip
 
-\columnratio{0.5}
+\columnratio{0.50}
+
 \begin{paracol}{2}
+
+\cvsection{Expériences}
 
 \cvevent{Technicien supérieur IT}{Firewall-Services}{2013 -- 2023}{Télétravail}
 \begin{itemize}
@@ -224,60 +222,65 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 \item Analyse fonctionnelle des besoins et analyses RCA.
 \item Accompagnement des équipes.
 \item Résolution des situations de crise et d’urgence.
-
 \end{itemize}
 
 \divider
 
 \cvevent{Freelance}{Heuzef}{2012 -- 2016}{Télétravail}
 \begin{itemize}
-\item Auto-entrepreneur
-\item Services IT, développement web et graphisme.
+\item Services IT.
+\item Développement web et graphisme.
 \end{itemize}
 
 \divider
 
-\cvevent{CEMÉA Aquitaine}{Technicien IT}{2011 -- 2011}{Télétravail}
+\cvevent{CEMÉA Aquitaine}{Technicien IT}{2011}{Télétravail}
 \begin{itemize}
 \item Responsable SI en Service Civique.
-\item Assistance et formation pédagogique et andragogique.
 \end{itemize}
+
+\divider
 
 \switchcolumn
 
-\cvevent{Marie de Bordeaux}{Animateur}{2011 -- 2011}{Bordeaux}
+\bigskip \bigskip \bigskip \bigskip
+
+\cvevent{Marie de Bordeaux}{Animateur}{2011}{Bordeaux}
 \begin{itemize}
-\item Animateur pour seniors à l'atelier informatique.
+\item Formateur pédagogique et andragogique.
 \end{itemize}
 
 \divider
 
-\cvevent{Docteur ordinateur}{Technicien IT}{2011 -- 2011}{Bordeaux}
-\begin{itemize}
-\item Dépannages informatique, B2C et B2B.
-\item Réparations en atelier.
-\end{itemize}
+\cvsection{Projets}
+
+\cvachievement{\faChartLine}{Amélioration du dispositif Cartofriches}{pour le compte du CEREMA}
 
 \divider
 
-\cvevent{Groupe Aquitem}{Designer Graphiste}{2011 -- 2011}{Bordeaux}
-\begin{itemize}
-\item Réalisation graphique, PAO et web.
-\end{itemize}
+\cvachievement{\faCogs}{Mise en production d'un modèle d'IA}{dans le domaine du paris sportif}
 
 \divider
 
-\cvevent{Viacarta}{Designer Graphiste}{2011 -- 2011}{Bordeaux}
-\begin{itemize}
-\item Imprimeur assistant dans la chaîne graphique.
-\end{itemize}
+\cvachievement{\faEye}{Conception d'un modèle CNN}{reconnaissance des champignons}
 
 \divider
 
-\cvevent{Divers}{}{2006 -- 2009}{Lot-et-Garonne}
-\begin{itemize}
-\item Divers petits jobs.
-\end{itemize}
+\cvachievement{\faMedkit}{Détection du stress chez les Parkinsoniens}{Datathon IA4care Dijon 2025}
+
+\divider
+
+\cvachievement{\faLightbulb}{Fondation et gestion d'un Fab-Lab}{dans la ville de Cognac}
+
+\divider
+
+\cvachievement{\faFlask}{Compétitions aux Startup Weekend de Bordeaux}{éditions 2012, 2013, 2015 et 2017}
+
+\divider
+
+\cvachievement{\faHandHoldingHeart}{Création et gestion de structures associatives}{pour l'inclusion et solidarité}
+
+\divider
 
 \end{paracol}
 
@@ -287,13 +290,11 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 \begin{paracol}{2}
 
 \begin{itemize}
-\item Aïkidoka
-\item FabLab-Manager
-\item Bricoleur
+\item {\faUserNinja} Aïkido
+\item {\faHammer} Bricolage
 \switchcolumn
-\item Auto-hébergeur
-\item Libriste
-\item Familial
+\item {\faServer} Auto-hébergement
+\item {\faLinux} Logiciel libre
 \end{itemize}
 
 \end{paracol}
