Update phone number format (ATS scan)

--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -56,7 +56,7 @@
 \begin{document}
 
 \name{Heuze Florent}
-\tagline{Chef de projet IT}
+\tagline{Chef de projet en intelligence artificielle}
 \photoL{6cm}{heuzef_2025_01}
 %\photoL{4cm}{heuzef_2025_portrait_min}
 
@@ -64,7 +64,7 @@
   \printinfo{\faCalendar}{1990}
   \location{Bordeaux, France}
   \email{contact@heuzef.com}
-  \phone{+33(0)6 31 32 66 54}
+  \phone{06 31 32 66 54}
   \homepage{heuzef.com}
   \linkedin{heuzef}
   %\github{heuzef}
