--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -64,7 +64,7 @@
   \printinfo{\faCalendar}{1990}
   \location{Bordeaux, France}
   \email{contact@heuzef.com}
-  \phone{+33(0)6 31 32 66 54}
+  \phone{+336 31 32 66 54}
   \homepage{heuzef.com}
   \linkedin{heuzef}
   %\github{heuzef}
