Update EN version

--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -64,7 +64,7 @@
   \printinfo{\faCalendar}{1990}
   \location{Bordeaux, France}
   \email{contact@heuzef.com}
-  \phone{+336 31 32 66 54}
+  \phone{+33631326654}
   \homepage{heuzef.com}
   \linkedin{heuzef}
   %\github{heuzef}
@@ -94,9 +94,10 @@ My ability to play a facilitator role between different experts allows me to cre
 
 \begin{paracol}{2}
 
-\cvsection{Approvals}
+  \cvsection{Approvals}
 
-\cvachievement{\faGraduationCap}{Machine Learning Engineer}{Datascientest, RNCP 36129 Level 7, 2025}
+\cvachievement{\faGraduationCap}{Machine Learning Engineer}{Datascientest, RNCP 36129 Level 7, 2025.\linebreak
+(Datascientist, MLOPS, Data Product Manager)}
 
 \cvachievement{\faGraduationCap}{IT Maintenance and Support Manager}{CESI, RNCP 34602 Level 5, 2015}
 
@@ -116,8 +117,6 @@ My ability to play a facilitator role between different experts allows me to cre
 
 \cvachievement{\faCertificate}{Graphic Designer}{Lignes et Formations, 2011}
 
-\cvachievement{\faCertificate}{PSC1}{Croix-Rouge, 2005/2008/2012/2022}
-
 \cvsection{Languages}
 
 \cvachievement{\faFlag}{French}{Native}
@@ -132,7 +131,7 @@ My ability to play a facilitator role between different experts allows me to cre
 
 \switchcolumn
 
-\cvsection{Skills}
+\cvsection{Compétences}
 
 \cvtag{Operational excellence {\color{GoldenMetallic}\faCogs}}\\
 \cvtag{Autonomous {\color{EngineeringOrange}\faDove}}
@@ -142,22 +141,20 @@ My ability to play a facilitator role between different experts allows me to cre
 \\
 \divider
 
-\cvtag{AI {\color{black}\faBrain}}
-\cvtag{Machine Learning {\color{GoldenMetallic}\faUserCog}}
-\cvtag{Deep Learning {\color{GoldenMetallic}\faUserCog}}\\
 \cvtag{Python {\color{ForestGreen}\faPython}}
-\cvtag{MLFlow {\color{cyan}\faSync*}}
-\cvtag{BentoML {\color{SlateGrey}\faLayerGroup}}
+\cvtag{IA/ML/DL {\color{GoldenMetallic}\faBrain}}
+\cvtag{MLOPS {\color{cyan}\faSync*}}
 \\
 \divider
 
-\cvtag{Data {\color{black}\faDatabase}}
-\cvtag{(No)SQL {\color{SlateGrey}\faCode}}
+\cvtag{(No)SQL {\color{SlateGrey}\faDatabase}}
 \cvtag{ETL {\color{SlateGrey}\faFileDownload}}
-\cvtag{API {\color{EgyptianBlue}\faPlug}}
-\cvtag{Scraping {\color{EgyptianBlue}\faSearch}}
 \cvtag{Data Viz {\color{Carmine}\faChartPie}}
-\cvtag{GDPR {\color{EgyptianBlue}\faGlobeEurope}}
+\\
+\cvtag{Scraping {\color{EgyptianBlue}\faSearch}}
+\cvtag{API {\color{EgyptianBlue}\faPlug}}
+\\
+\cvtag{RGPD {\color{EgyptianBlue}\faGlobeEurope}}
 \cvtag{AI Act {\color{GoldenMetallic}\faBalanceScale}}
 \\
 \divider
@@ -165,9 +162,7 @@ My ability to play a facilitator role between different experts allows me to cre
 \cvtag{DevSecOps {\color{black}\faLinux}}
 \cvtag{Git/DVC {\color{EngineeringOrange}\faCodeBranch}}\\
 \cvtag{Containerization {\color{EgyptianBlue}\faDocker}}
-\cvtag{Orchestration {\color{Carmine}\faBoxes}}\\
-\cvtag{Jenkins {\color{EngineeringOrange}\faJenkins}}
-\cvtag{Airflow {\color{DodgerBlue}\faFan}}
+\cvtag{Orchestration {\color{Carmine}\faBoxes}}
 \\
 \divider
 
@@ -207,10 +202,13 @@ My ability to play a facilitator role between different experts allows me to cre
     \includegraphics[width=1\linewidth]{heuzef_2025_02.jpg}
 \end{figure}
 
-\cvsection{Experiences}
+\bigskip
 
-\columnratio{0.5}
+\columnratio{0.50}
+
 \begin{paracol}{2}
+
+\cvsection{Works}
 
 \cvevent{Senior IT Technician}{Firewall-Services}{2013 -- 2023}{Remote}
 \begin{itemize}
@@ -224,76 +222,79 @@ My ability to play a facilitator role between different experts allows me to cre
 \item Functional analysis of needs and RCA analyses.
 \item Support for teams.
 \item Resolution of crisis and emergency situations.
-
 \end{itemize}
 
 \divider
 
-\cvevent{Freelance}{Heuzef}{2012 -- 2016}{Remote}
+\cvevent{Freelance}{Heuzef}{2012 -- 2016}{Télétravail}
 \begin{itemize}
-\item Self-employed
-\item IT services, web development and graphics.
+\item IT services IT.
+\item Web development and graphics.
 \end{itemize}
 
 \divider
 
-\cvevent{CEMÉA Aquitaine}{IT Technician}{2011 -- 2011}{Remote}
+\cvevent{CEMÉA Aquitaine}{IT Technician}{2011}{Remote}
 \begin{itemize}
-\item IT Manager in Patriotic Contract.
-\item Educational and andragogical assistance and training.
+ \item IT Manager in Patriotic Contract.
 \end{itemize}
+
+\divider
 
 \switchcolumn
 
-\cvevent{City hall of Bordeaux}{Animator}{2011 -- 2011}{Bordeaux}
+\bigskip \bigskip \bigskip \bigskip
+
+\cvevent{City hall of Bordeaux}{Animator}{2011}{Bordeaux}
 \begin{itemize}
-\item Senior facilitator at "Atelier informatique".
+\item Teacher trainer.
 \end{itemize}
 
 \divider
 
-\cvevent{Docteur ordinateur}{IT Technician}{2011 -- 2011}{Bordeaux}
-\begin{itemize}
-\item Computer repairs, B2C and B2B.
-\item Workshop repairs.
-\end{itemize}
+\cvsection{Projects}
+
+\cvachievement{\faChartLine}{Improvement of the Cartofriches system}{on behalf of french ministry}
 
 \divider
 
-\cvevent{Groupe Aquitem}{Graphic Designer}{2011 -- 2011}{Bordeaux}
-\begin{itemize}
-\item Graphic design, DTP and Web.
-\end{itemize}
+\cvachievement{\faCogs}{Production of an AI model}{for sports betting}
 
 \divider
 
-\cvevent{Viacarta}{Graphic Designer}{2011 -- 2011}{Bordeaux}
-\begin{itemize}
-\item Assistant printer in the graphics chain.
-\end{itemize}
+\cvachievement{\faEye}{Design of a CNN}{mushroom recognition model}
 
 \divider
 
-\cvevent{Divers}{}{2006 -- 2009}{Lot-et-Garonne}
-\begin{itemize}
-\item Various small jobs.
-\end{itemize}
+\cvachievement{\faMedkit}{Detection of stress in Parkinson's patients}{Datathon IA4care Dijon 2025}
+
+\divider
+
+\cvachievement{\faLightbulb}{Foundation and management of a Fab-Lab}{in Cognac}
+
+\divider
+
+\cvachievement{\faFlask}{Competitions at Startup Weekend Bordeaux}{in 2012, 2013, 2015 et 2017}
+
+\divider
+
+\cvachievement{\faHandHoldingHeart}{Creation and management of associations}{for inclusion and solidarity}
+
+\divider
 
 \end{paracol}
 
-\cvsection{Interests}
+\cvsection{Hobbies}
 
 \columnratio{0.5}
 \begin{paracol}{2}
 
 \begin{itemize}
-\item Aïkidoka (martial art)
-\item FabLab-Manager
-\item Handyman
+\item {\faUserNinja} Aïkido
+\item {\faHammer} Handyman
 \switchcolumn
-\item Self-hoster
-\item Computer libertarian
-\item Family
+\item {\faServer} Self-hosted
+\item {\faLinux} Free software
 \end{itemize}
 
 \end{paracol}
@@ -301,5 +302,5 @@ My ability to play a facilitator role between different experts allows me to cre
 \bigskip
 
 \raggedleft
-{\textit{Last update \today}}\github{heuzef/cv}
+{\textit{Dernière mise à jour \today}}\github{heuzef/cv}
 \end{document}
