--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -56,7 +56,7 @@
 \begin{document}
 
 \name{Heuze Florent}
-\tagline{Chef de projet en intelligence artificielle}
+\tagline{Responsable de projet en intelligence artificielle}
 \photoL{6cm}{heuzef_2025_01}
 %\photoL{4cm}{heuzef_2025_portrait_min}
 
