Update with QR code video presentation

--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -199,7 +199,7 @@ My ability to play a facilitator role between different experts allows me to cre
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\linewidth]{heuzef_2025_02.jpg}
+    \includegraphics[width=1\linewidth]{heuzef_2025_03.png}
 \end{figure}
 
 \bigskip
