--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -199,7 +199,7 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\linewidth]{heuzef_2025_02.jpg}
+    \includegraphics[width=1\linewidth]{heuzef_2025_03.png}
 \end{figure}
 
 \bigskip
