Fix some minor errors

--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -226,7 +226,7 @@ My ability to play a facilitator role between different experts allows me to cre
 
 \divider
 
-\cvevent{Freelance}{Heuzef}{2012 -- 2016}{Télétravail}
+\cvevent{Freelance}{Heuzef}{2012 -- 2016}{Remote}
 \begin{itemize}
 \item IT services IT.
 \item Web development and graphics.
