--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -245,7 +245,7 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 
 \bigskip \bigskip \bigskip \bigskip
 
-\cvevent{Marie de Bordeaux}{Animateur}{2011}{Bordeaux}
+\cvevent{Mairie de Bordeaux}{Animateur}{2011}{Bordeaux}
 \begin{itemize}
 \item Formateur pédagogique et andragogique.
 \end{itemize}
