--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -131,7 +131,7 @@ My ability to play a facilitator role between different experts allows me to cre
 
 \switchcolumn
 
-\cvsection{Compétences}
+\cvsection{Skills}
 
 \cvtag{Operational excellence {\color{GoldenMetallic}\faCogs}}\\
 \cvtag{Autonomous {\color{EngineeringOrange}\faDove}}
