--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -57,31 +57,28 @@
 
 \name{Heuze Florent}
 \tagline{Responsable de projet en intelligence artificielle}
-\photoL{6cm}{heuzef_2025_01}
-%\photoL{4cm}{heuzef_2025_portrait_min}
+\photoL{7cm}{heuzef_2025_04}
 
 \personalinfo{
-  \printinfo{\faCalendar}{1990}
-  \location{Bordeaux, France}
-  \email{contact@heuzef.com}
+  % \printinfo{\faCalendar}{1990}
   \phone{06 31 32 66 54}
-  \homepage{heuzef.com}
+  \email{contact@heuzef.com}
+  \\
   \linkedin{heuzef}
+  \homepage{heuzef.com}
+  \location{Bordeaux, France}
   %\github{heuzef}
+  \\ \bigskip
+  \faFlag{Français (Natif)}
+  \faFlag{Anglais (B2)}
+  \faFlag{Chinois (A1)}
 }
 
 \makecvheader
 
 \cvsection{À propos}
-
 \begin{quote}
 ``
-Fort d'une expérience de 15 ans en tant que technicien IT, je me réoriente dans le domaine de la Data.
-
-Animé par le partage et le travail d’équipe, je m’attache à l'analyse des besoins pour proposer des solutions alliant pertinence et excellence opérationnelle.
-
-\medskip
-
 Au fil de ma carrière, j’ai souvent joué un rôle de guide, aidant à structurer et à organiser les projets. 
 
 Ma capacité à jouer un rôle de facilitateur entre différents experts me permet de créer un langage commun et d'optimiser la collaboration, contribuant ainsi à l'atteinte d'objectifs ambitieux et innovants.
@@ -89,218 +86,101 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 \end{quote}
 
 \bigskip
-
-\columnratio{0.55}
-
+\columnratio{0.5}
 \begin{paracol}{2}
 
 \cvsection{Qualifications}
-
 \cvachievement{\faGraduationCap}{Chef de projet en Intelligence Artificielle}{Datascientest, RNCP 36129 Niveau 7, 2025.\linebreak
 (Datascientist, MLOPS, Data Product Manager)}
-
-\cvachievement{\faGraduationCap}{Gestionnaire en Maintenance et Support Informatique}{CESI, RNCP 34602 Niveau 5, 2015}
-
+\cvachievement{\faGraduationCap}{Gestionnaire en Maintenance et Support IT}{CESI, RNCP 34602 Niveau 5, 2015}
 \cvachievement{\faGraduationCap}{Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-Informatique, RNCP5918 Niveau 5, 2013}
-
 \cvachievement{\faGraduationCap}{Conseiller et Assistant en Technologies de l'Information de de la Communication}{AFPA, RNCP4537 Niveau 4, 2011}
 
 \divider
 
+\cvachievement{\faCertificate}{Dataiku Core Designer Certificate}{Dataiku, 2025}
 \cvachievement{\faCertificate}{AWS Certified Cloud Practitioner}{AWS, 2025}
-
 \cvachievement{\faCertificate}{OpenCV Bootcamp}{OpenCV University, 2024}
-
-\cvachievement{\faCertificate}{Chinois A1}{CCI Cognac (Lilate), 2023}
-
-\cvachievement{\faCertificate}{CCNA1}{CISCO, 2013}
-
+\cvachievement{\faCertificate}{Chinois A1}{CCI Cognac, 2023}
+\cvachievement{\faCertificate}{CISCO CCNA1}{CISCO, 2013}
 \cvachievement{\faCertificate}{Designer Graphiste}{Lignes et Formations, 2011}
-
-\cvsection{Langues}
-
-\cvachievement{\faFlag}{Français}{Natif}
-
-\divider
-
-\cvachievement{\faFlag}{Anglais}{B2}
-
-\divider
-
-\cvachievement{\faFlag}{Chinois}{A1}
-
-\switchcolumn
 
 \cvsection{Compétences}
 
-\cvtag{Excellence opérationnelle {\color{GoldenMetallic}\faCogs}}\\
-\cvtag{Autonome {\color{EngineeringOrange}\faDove}}
-\cvtag{Motivateur {\color{Carmine}\faBullhorn}}\\
-\cvtag{Écoute active {\color{EgyptianBlue}\faAssistiveListeningSystems}}
-\cvtag{Résilient {\color{ForestGreen}\faTree}}
-\\
+\cvtag{Autonome {\color{SlateGrey}\faDove}}
+\cvtag{Motivateur {\color{SlateGrey}\faBullhorn}}\\
+\cvtag{Écoute active {\color{SlateGrey}\faAssistiveListeningSystems}}
+\cvtag{Résilient {\color{SlateGrey}\faTree}}\\
+\cvtag{Excellence opérationnelle {\color{SlateGrey}\faCogs}}\\
 \divider
 
-\cvtag{Python {\color{ForestGreen}\faPython}}
-\cvtag{IA/ML/DL {\color{GoldenMetallic}\faBrain}}
-\cvtag{MLOPS {\color{cyan}\faSync*}}
-\\
-\divider
-
-\cvtag{(No)SQL {\color{SlateGrey}\faDatabase}}
+\cvtag{Python {\color{SlateGrey}\faPython}}
+\cvtag{MLOPS {\color{SlateGrey}\faSync*}}
 \cvtag{ETL {\color{SlateGrey}\faFileDownload}}
-\cvtag{Data Viz {\color{Carmine}\faChartPie}}
+\cvtag{DB {\color{SlateGrey}\faDatabase}}
 \\
-\cvtag{Scraping {\color{EgyptianBlue}\faSearch}}
-\cvtag{API {\color{EgyptianBlue}\faPlug}}
+\cvtag{Data Viz {\color{SlateGrey}\faChartPie}}
+\cvtag{Scraping / API {\color{SlateGrey}\faPlug}}
 \\
-\cvtag{RGPD {\color{EgyptianBlue}\faGlobeEurope}}
-\cvtag{AI Act {\color{GoldenMetallic}\faBalanceScale}}
+\cvtag{RGPD {\color{SlateGrey}\faGlobeEurope}}
+\cvtag{AI Act {\color{SlateGrey}\faBalanceScale}}
 \\
-\divider
-
-\cvtag{DevSecOps {\color{black}\faLinux}}
-\cvtag{Git/DVC {\color{EngineeringOrange}\faCodeBranch}}\\
-\cvtag{Conteneurisation {\color{EgyptianBlue}\faDocker}}
-\cvtag{Orchestration {\color{Carmine}\faBoxes}}
+\cvtag{Réseaux TCP/IP {\color{SlateGrey}\faNetworkWired}}
+\cvtag{Hypervision {\color{SlateGrey}\faServer}}
+\cvtag{Git {\color{SlateGrey}\faCodeBranch}}
 \\
-\divider
+\cvtag{Conteneurisation {\color{SlateGrey}\faDocker}}
+\cvtag{Orchestration {\color{SlateGrey}\faBoxes}}
+\cvtag{Sécurité {\color{SlateGrey}\faShield*}}
+\cvtag{IaC {\color{SlateGrey}\faCode}}
+\cvtag{Supervision {\color{SlateGrey}\faEye}}
+\cvtag{Cloud {\color{SlateGrey}\faCloud}}
+\cvtag{Infographie {\color{SlateGrey}\faPalette}}
 
-\cvtag{Réseaux TCP/IP {\color{black}\faNetworkWired}}
-\cvtag{Hypervision {\color{EngineeringOrange}\faServer}}\\
-\cvtag{IaC {\color{black}\faCode}}
-\cvtag{Sécurité {\color{EgyptianBlue}\faShield*}}
-\cvtag{Supervision {\color{Carmine}\faEye}}
-\\
-\divider
-
-\cvtag{Infographie {\color{black}\faPalette}}
-\cvtag{PAO {\color{Flax}\faPrint}}
-\cvtag{CAO {\color{EngineeringOrange}\faCube}}
-\cvtag{DAO {\color{SlateGrey}\faPencilRuler}}
-\\
-\divider
-
-\cvtag{Web {\color{black}\faGlobe}}
-\cvtag{Dev {\color{EngineeringOrange}\faHtml5}}
-\cvtag{CMS {\color{DodgerBlue}\faWordpress}}
-\cvtag{SSG {\color{Flax}\faSitemap}}
-\\
-\divider
-
-\cvtag{Cloud {\color{black}\faCloud}}
-\cvtag{AWS {\color{EngineeringOrange}\faAws}}
-\\
-\divider
-
-\end{paracol}
-
-\newpage
-
-\begin{figure}
-    \centering
-    \includegraphics[width=1\linewidth]{heuzef_2025_03.png}
-\end{figure}
-
-\bigskip
-
-\columnratio{0.50}
-
-\begin{paracol}{2}
+\switchcolumn
 
 \cvsection{Expériences}
-
-\cvevent{Technicien supérieur IT}{Firewall-Services}{2013 -- 2023}{Télétravail}
+\cvevent{Technicien supérieur IT - Firewall-Services}{}{2013 -- 2023}{Télétravail}
 \begin{itemize}
 \item ESN spécialisée en sécurité et en logiciels libres.
+\item Administration et supervision des infrastructures IT.
 \item Maintenance d’une dizaine de parcs informatiques.
 \item Maintenance en salle serveur et ZRR.
 \item Assistance et formations proactives auprès des clients.
-\item Supervision des infrastructures IT.
 \item Rédaction de rapports et documentations technique.
 \item Optimisation continue des procédures internes.
-\item Analyse fonctionnelle des besoins et analyses RCA.
+\item Analyses fonctionnelles des besoins et RCA.
 \item Accompagnement des équipes.
 \item Résolution des situations de crise et d’urgence.
 \end{itemize}
-
 \divider
-
-\cvevent{Freelance}{Heuzef}{2012 -- 2016}{Télétravail}
+\cvevent{Freelance}{}{2012 -- 2016}{Télétravail}
 \begin{itemize}
-\item Services IT.
-\item Développement web et graphisme.
+\item Services IT. Développement web et graphisme.
 \end{itemize}
-
 \divider
-
-\cvevent{CEMÉA Aquitaine}{Technicien IT}{2011}{Télétravail}
+\cvevent{Responsable SI - CEMÉA Aquitaine}{}{2011}{Télétravail}
 \begin{itemize}
-\item Responsable SI en Service Civique.
+\item Technicien et animateur en Service Civique.
 \end{itemize}
-
-\divider
-
-\switchcolumn
-
-\bigskip \bigskip \bigskip \bigskip
-
-\cvevent{Mairie de Bordeaux}{Animateur}{2011}{Bordeaux}
-\begin{itemize}
-\item Formateur pédagogique et andragogique.
-\end{itemize}
-
-\divider
 
 \cvsection{Projets}
-
-\cvachievement{\faChartLine}{Amélioration du dispositif Cartofriches}{pour le compte du CEREMA}
-
-\divider
-
-\cvachievement{\faCogs}{Mise en production d'un modèle d'IA}{dans le domaine du paris sportif}
-
-\divider
-
-\cvachievement{\faEye}{Conception d'un modèle CNN}{reconnaissance des champignons}
+{\faRobot}{Invention du Caligraphomate (HACK1ROBO 2025)}\\
+{\faChartLine}{Amélioration dispositif Cartofriches pour le CEREMA}\\
+{\faCogs}{Mise en production d'un modèle d'IA (paris sportif)}\\
+{\faEye}{Conception modèle CNN (reconnaissance champignons)}\\
+{\faMedkit}{Parkinson Stress Shield (Datathon Dijon 2025)}\\
+{\faLightbulb}{Fondation du Fab-Lab de la ville de Cognac}\\
+{\faFlask}{Startup Weekend Bordeaux 2012, 2013, 2015, 2017}\\
+{\faHandHoldingHeart}{Création d'associations pour l'inclusion/solidarité}
 
 \divider
 
-\cvachievement{\faMedkit}{Détection du stress chez les Parkinsoniens}{Datathon IA4care Dijon 2025}
-
-\divider
-
-\cvachievement{\faLightbulb}{Fondation et gestion d'un Fab-Lab}{dans la ville de Cognac}
-
-\divider
-
-\cvachievement{\faFlask}{Compétitions aux Startup Weekend de Bordeaux}{éditions 2012, 2013, 2015 et 2017}
-
-\divider
-
-\cvachievement{\faHandHoldingHeart}{Création et gestion de structures associatives}{pour l'inclusion et solidarité}
-
-\divider
-
-\end{paracol}
-
-\cvsection{Centres d'intérêts}
-
-\columnratio{0.5}
-\begin{paracol}{2}
-
-\begin{itemize}
-\item {\faUserNinja} Aïkido
-\item {\faHammer} Bricolage
-\switchcolumn
-\item {\faServer} Auto-hébergement
-\item {\faLinux} Logiciel libre
-\end{itemize}
-
-\end{paracol}
-
-\bigskip
+Intérêts : {\faUserNinja} Aïkido {\faServer} Auto-hébergement {\faLinux} Libre\\
 
 \raggedleft
-{\textit{Dernière mise à jour \today}}\github{heuzef/cv}
+\bigskip
+\bigskip
+{\textit{\today}}\github{heuzef/cv}
+\end{paracol}
 \end{document}
