Update EN version

--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -57,31 +57,28 @@
 
 \name{Heuze Florent}
 \tagline{Artificial Intelligence Project Manager}
-\photoL{6cm}{heuzef_2025_01}
-%\photoL{4cm}{heuzef_2025_portrait_min}
+\photoL{7cm}{heuzef_2025_04}
 
 \personalinfo{
-  \printinfo{\faCalendar}{1990}
-  \location{Bordeaux, France}
+  % \printinfo{\faCalendar}{1990}
+  \phone{06 31 32 66 54}
   \email{contact@heuzef.com}
-  \phone{+33631326654}
-  \homepage{heuzef.com}
+  \\
   \linkedin{heuzef}
+  \homepage{heuzef.com}
+  \location{Bordeaux, France}
   %\github{heuzef}
+  \\ \bigskip
+  \faFlag{French (Native)}
+  \faFlag{English (B2)}
+  \faFlag{Chinese (A1)}
 }
 
 \makecvheader
 
 \cvsection{About me}
-
 \begin{quote}
 ``
-With 15 years of experience as an IT technician, I am reorienting myself in the field of Data.
-
-Driven by sharing and teamwork, I focus on analyzing needs to propose solutions that combine relevance and operational excellence.
-
-\medskip
-
 Throughout my career, I have often played a guiding role, helping to structure and organize projects.
 
 My ability to play a facilitator role between different experts allows me to create a common language and optimize collaboration, thus contributing to the achievement of ambitious and innovative objectives.
@@ -89,127 +86,59 @@ My ability to play a facilitator role between different experts allows me to cre
 \end{quote}
 
 \bigskip
-
-\columnratio{0.55}
-
+\columnratio{0.5}
 \begin{paracol}{2}
 
-  \cvsection{Approvals}
-
-\cvachievement{\faGraduationCap}{Machine Learning Engineer}{Datascientest, RNCP 36129 Level 7, 2025.\linebreak
+\cvsection{Approvals}
+\cvachievement{\faGraduationCap}{Machine Learning Engineer}{Datascientest, RNCP 36129 Level 7, 2025\linebreak
 (Datascientist, MLOPS, Data Product Manager)}
-
 \cvachievement{\faGraduationCap}{IT Maintenance and Support Manager}{CESI, RNCP 34602 Level 5, 2015}
-
 \cvachievement{\faGraduationCap}{IT Technician Resource Manager}{Site-Informatique, RNCP5918 Level 5, 2013}
-
-\cvachievement{\faGraduationCap}{Information and Communication Technology Advisor and Assistant}{AFPA, RNCP4537 Level 4, 2011}
+\cvachievement{\faGraduationCap}{IT Communication Advisor}{AFPA, RNCP4537 Level 4, 2011}
 
 \divider
 
+\cvachievement{\faCertificate}{Dataiku Core Designer Certificate}{Dataiku, 2025}
 \cvachievement{\faCertificate}{AWS Certified Cloud Practitioner}{AWS, 2025}
-
 \cvachievement{\faCertificate}{OpenCV Bootcamp}{OpenCV University, 2024}
-
-\cvachievement{\faCertificate}{Chinese A1}{CCI Cognac (Lilate), 2023}
-
-\cvachievement{\faCertificate}{CCNA1}{CISCO, 2013}
-
+\cvachievement{\faCertificate}{Chinese A1}{CCI Cognac, 2023}
+\cvachievement{\faCertificate}{CISCO CCNA1}{CISCO, 2013}
 \cvachievement{\faCertificate}{Graphic Designer}{Lignes et Formations, 2011}
 
-\cvsection{Languages}
-
-\cvachievement{\faFlag}{French}{Native}
-
+\cvsection{Skills}
+\cvtag{Autonomous {\color{SlateGrey}\faDove}}
+\cvtag{Motivator {\color{SlateGrey}\faBullhorn}}\\
+\cvtag{Active Listening {\color{SlateGrey}\faAssistiveListeningSystems}}
+\cvtag{Resilient {\color{SlateGrey}\faTree}}\\
+\cvtag{Operational Excellence {\color{SlateGrey}\faCogs}}\\
 \divider
 
-\cvachievement{\faFlag}{English}{B2}
-
-\divider
-
-\cvachievement{\faFlag}{Chinese}{A1}
+\cvtag{Python {\color{SlateGrey}\faPython}}
+\cvtag{MLOPS {\color{SlateGrey}\faSync*}}
+\cvtag{ETL {\color{SlateGrey}\faFileDownload}}
+\cvtag{DB {\color{SlateGrey}\faDatabase}}
+\\
+\cvtag{Data Viz {\color{SlateGrey}\faChartPie}}
+\cvtag{Scraping / API {\color{SlateGrey}\faPlug}}
+\\
+\cvtag{RGPD {\color{SlateGrey}\faGlobeEurope}}
+\cvtag{AI Act {\color{SlateGrey}\faBalanceScale}}
+\\
+\cvtag{TCP/IP Network {\color{SlateGrey}\faNetworkWired}}
+\cvtag{Hypervision {\color{SlateGrey}\faServer}}
+\cvtag{Git {\color{SlateGrey}\faCodeBranch}}
+\\
+\cvtag{Conteneurization {\color{SlateGrey}\faDocker}}
+\cvtag{Orchestration {\color{SlateGrey}\faBoxes}}
+\cvtag{Security {\color{SlateGrey}\faShield*}}
+\cvtag{IaC {\color{SlateGrey}\faCode}}
+\cvtag{Supervision {\color{SlateGrey}\faEye}}
+\cvtag{Cloud {\color{SlateGrey}\faCloud}}
+\cvtag{Infographic {\color{SlateGrey}\faPalette}}
 
 \switchcolumn
 
-\cvsection{Skills}
-
-\cvtag{Operational excellence {\color{GoldenMetallic}\faCogs}}\\
-\cvtag{Autonomous {\color{EngineeringOrange}\faDove}}
-\cvtag{Motivator {\color{Carmine}\faBullhorn}}\\
-\cvtag{Active listening {\color{EgyptianBlue}\faAssistiveListeningSystems}}
-\cvtag{Resilient {\color{ForestGreen}\faTree}}
-\\
-\divider
-
-\cvtag{Python {\color{ForestGreen}\faPython}}
-\cvtag{IA/ML/DL {\color{GoldenMetallic}\faBrain}}
-\cvtag{MLOPS {\color{cyan}\faSync*}}
-\\
-\divider
-
-\cvtag{(No)SQL {\color{SlateGrey}\faDatabase}}
-\cvtag{ETL {\color{SlateGrey}\faFileDownload}}
-\cvtag{Data Viz {\color{Carmine}\faChartPie}}
-\\
-\cvtag{Scraping {\color{EgyptianBlue}\faSearch}}
-\cvtag{API {\color{EgyptianBlue}\faPlug}}
-\\
-\cvtag{RGPD {\color{EgyptianBlue}\faGlobeEurope}}
-\cvtag{AI Act {\color{GoldenMetallic}\faBalanceScale}}
-\\
-\divider
-
-\cvtag{DevSecOps {\color{black}\faLinux}}
-\cvtag{Git/DVC {\color{EngineeringOrange}\faCodeBranch}}\\
-\cvtag{Containerization {\color{EgyptianBlue}\faDocker}}
-\cvtag{Orchestration {\color{Carmine}\faBoxes}}
-\\
-\divider
-
-\cvtag{TCP/IP networks {\color{black}\faNetworkWired}}
-\cvtag{Hypervision {\color{EngineeringOrange}\faServer}}\\
-\cvtag{IaC {\color{black}\faCode}}
-\cvtag{Security {\color{EgyptianBlue}\faShield*}}
-\cvtag{Supervision {\color{Carmine}\faEye}}
-\\
-\divider
-
-\cvtag{Infographic {\color{black}\faPalette}}
-\cvtag{PAO {\color{Flax}\faPrint}}
-\cvtag{CAO {\color{EngineeringOrange}\faCube}}
-\cvtag{DAO {\color{SlateGrey}\faPencilRuler}}
-\\
-\divider
-
-\cvtag{Web {\color{black}\faGlobe}}
-\cvtag{Dev {\color{EngineeringOrange}\faHtml5}}
-\cvtag{CMS {\color{DodgerBlue}\faWordpress}}
-\cvtag{SSG {\color{Flax}\faSitemap}}
-\\
-\divider
-
-\cvtag{Cloud {\color{black}\faCloud}}
-\cvtag{AWS {\color{EngineeringOrange}\faAws}}
-\\
-\divider
-
-\end{paracol}
-
-\newpage
-
-\begin{figure}
-    \centering
-    \includegraphics[width=1\linewidth]{heuzef_2025_03.png}
-\end{figure}
-
-\bigskip
-
-\columnratio{0.50}
-
-\begin{paracol}{2}
-
 \cvsection{Works}
-
 \cvevent{Senior IT Technician}{Firewall-Services}{2013 -- 2023}{Remote}
 \begin{itemize}
 \item Digital service company (security and free software).
@@ -223,84 +152,35 @@ My ability to play a facilitator role between different experts allows me to cre
 \item Support for teams.
 \item Resolution of crisis and emergency situations.
 \end{itemize}
-
 \divider
-
-\cvevent{Freelance}{Heuzef}{2012 -- 2016}{Remote}
+\cvevent{Freelance}{}{2012 -- 2016}{Remote}
 \begin{itemize}
-\item IT services IT.
-\item Web development and graphics.
+\item Services IT. Développement web et graphisme.
+\item IT services. Web development and graphic.
 \end{itemize}
-
 \divider
-
-\cvevent{CEMÉA Aquitaine}{IT Technician}{2011}{Remote}
+\cvevent{IT Manager - CEMÉA Aquitaine}{}{2011}{Remote}
 \begin{itemize}
- \item IT Manager in Patriotic Contract.
+\item Technician facilitator (patriotic contract).
 \end{itemize}
-
-\divider
-
-\switchcolumn
-
-\bigskip \bigskip \bigskip \bigskip
-
-\cvevent{City hall of Bordeaux}{Animator}{2011}{Bordeaux}
-\begin{itemize}
-\item Teacher trainer.
-\end{itemize}
-
-\divider
 
 \cvsection{Projects}
-
-\cvachievement{\faChartLine}{Improvement of the Cartofriches system}{on behalf of french ministry}
-
-\divider
-
-\cvachievement{\faCogs}{Production of an AI model}{for sports betting}
-
-\divider
-
-\cvachievement{\faEye}{Design of a CNN}{mushroom recognition model}
+{\faRobot}{Caligraphomate inventor (HACK1ROBO 2025)}\\
+{\faChartLine}{Improvement of the Cartofriches system for CEREMA}\\
+{\faCogs}{Implementation of an AI model (sports betting)}\\
+{\faEye}{CNN model design (recognition mushrooms)}\\
+{\faMedkit}{Parkinson's anti-stress shield (Dijon Datathon 2025)}\\
+{\faLightbulb}{Foundation of the Cognac Fab-Lab}\\
+{\faFlask}{Startup Weekend Bordeaux 2012, 2013, 2015, 2017}\\
+{\faHandHoldingHeart}{Creation of associations for inclusion/solidarity}
 
 \divider
 
-\cvachievement{\faMedkit}{Detection of stress in Parkinson's patients}{Datathon IA4care Dijon 2025}
-
-\divider
-
-\cvachievement{\faLightbulb}{Foundation and management of a Fab-Lab}{in Cognac}
-
-\divider
-
-\cvachievement{\faFlask}{Competitions at Startup Weekend Bordeaux}{in 2012, 2013, 2015 et 2017}
-
-\divider
-
-\cvachievement{\faHandHoldingHeart}{Creation and management of associations}{for inclusion and solidarity}
-
-\divider
-
-\end{paracol}
-
-\cvsection{Hobbies}
-
-\columnratio{0.5}
-\begin{paracol}{2}
-
-\begin{itemize}
-\item {\faUserNinja} Aïkido
-\item {\faHammer} Handyman
-\switchcolumn
-\item {\faServer} Self-hosted
-\item {\faLinux} Free software
-\end{itemize}
-
-\end{paracol}
-
-\bigskip
+Interests : {\faUserNinja} Aïkido {\faServer} Self-hosted {\faLinux} Free Software\\
 
 \raggedleft
-{\textit{Dernière mise à jour \today}}\github{heuzef/cv}
+\bigskip
+\bigskip
+{\textit{\today}}\github{heuzef/cv}
+\end{paracol}
 \end{document}
