Add Dataiku ML Practitioner Certificate

--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -98,7 +98,7 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 
 \divider
 
-\cvachievement{\faCertificate}{Dataiku Core Designer Certificate}{Dataiku, 2025}
+\cvachievement{\faCertificate}{Dataiku ML Practitioner Certificate}{Dataiku, 2025}
 \cvachievement{\faCertificate}{AWS Certified Cloud Practitioner}{AWS, 2025}
 \cvachievement{\faCertificate}{OpenCV Bootcamp}{OpenCV University, 2024}
 \cvachievement{\faCertificate}{Chinois A1}{CCI Cognac, 2023}
