Got the Dataiku MLOPS Practitioner Certificate

--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -98,7 +98,7 @@ My ability to play a facilitator role between different experts allows me to cre
 
 \divider
 
-\cvachievement{\faCertificate}{Dataiku ML Practitioner Certificate}{Dataiku, 2025}
+\cvachievement{\faCertificate}{Dataiku MLOps Practitioner Certificate}{Dataiku, 2025}
 \cvachievement{\faCertificate}{AWS Certified Cloud Practitioner}{AWS, 2025}
 \cvachievement{\faCertificate}{OpenCV Bootcamp}{OpenCV University, 2024}
 \cvachievement{\faCertificate}{Chinese A1}{CCI Cognac, 2023}
