--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -56,7 +56,7 @@
 \begin{document}
 
 \name{Heuze Florent}
-\tagline{Artificial Intelligence Project Manager}
+\tagline{Data and AI Project Manager}
 \photoL{7cm}{heuzef_2025_04}
 
 \personalinfo{
@@ -91,7 +91,7 @@ My ability to play a facilitator role between different experts allows me to cre
 
 \cvsection{Approvals}
 \cvachievement{\faGraduationCap}{Machine Learning Engineer}{Datascientest, RNCP 36129 Level 7, 2025\linebreak
-(Datascientist, MLOPS, Data Product Manager)}
+(Datascientist, MLOps, Data Product Manager)}
 \cvachievement{\faGraduationCap}{IT Maintenance and Support Manager}{CESI, RNCP 34602 Level 5, 2015}
 \cvachievement{\faGraduationCap}{IT Technician Resource Manager}{Site-Informatique, RNCP5918 Level 5, 2013}
 \cvachievement{\faGraduationCap}{IT Communication Advisor}{AFPA, RNCP4537 Level 4, 2011}
@@ -106,33 +106,36 @@ My ability to play a facilitator role between different experts allows me to cre
 \cvachievement{\faCertificate}{Graphic Designer}{Lignes et Formations, 2011}
 
 \cvsection{Skills}
+
 \cvtag{Autonomous {\color{SlateGrey}\faDove}}
-\cvtag{Motivator {\color{SlateGrey}\faBullhorn}}\\
-\cvtag{Active Listening {\color{SlateGrey}\faAssistiveListeningSystems}}
+\cvtag{Motivator {\color{SlateGrey}\faBullhorn}}
 \cvtag{Resilient {\color{SlateGrey}\faTree}}\\
-\cvtag{Operational Excellence {\color{SlateGrey}\faCogs}}\\
+\cvtag{Operational Excellence {\color{SlateGrey}\faCogs}}
+\cvtag{Multidisciplinary {\color{SlateGrey}\faHandshake}}\\
 \divider
 
 \cvtag{Python {\color{SlateGrey}\faPython}}
-\cvtag{MLOPS {\color{SlateGrey}\faSync*}}
-\cvtag{ETL {\color{SlateGrey}\faFileDownload}}
-\cvtag{DB {\color{SlateGrey}\faDatabase}}
+\cvtag{MLOps {\color{SlateGrey}\faSync*}}
+\cvtag{ML/DL/LLM {\color{SlateGrey}\faBrain}}
 \\
-\cvtag{Data Viz {\color{SlateGrey}\faChartPie}}
-\cvtag{Scraping / API {\color{SlateGrey}\faPlug}}
+\cvtag{(No)SQL) {\color{SlateGrey}\faDatabase}}
+\cvtag{ETL {\color{SlateGrey}\faFileDownload}}
+\cvtag{Scraping / API / MCP {\color{SlateGrey}\faPlug}}
+\cvtag{Data Viz (PowerBI, Looker Studio, Python libs){\color{SlateGrey}\faChartPie}}
 \\
 \cvtag{RGPD {\color{SlateGrey}\faGlobeEurope}}
 \cvtag{AI Act {\color{SlateGrey}\faBalanceScale}}
+\cvtag{Security {\color{SlateGrey}\faShield*}}
 \\
 \cvtag{TCP/IP Network {\color{SlateGrey}\faNetworkWired}}
 \cvtag{Hypervision {\color{SlateGrey}\faServer}}
-\cvtag{Git {\color{SlateGrey}\faCodeBranch}}
+\cvtag{Supervision {\color{SlateGrey}\faEye}}
 \\
 \cvtag{Conteneurization {\color{SlateGrey}\faDocker}}
 \cvtag{Orchestration {\color{SlateGrey}\faBoxes}}
-\cvtag{Security {\color{SlateGrey}\faShield*}}
+\\
+\cvtag{Git {\color{SlateGrey}\faCodeBranch}}
 \cvtag{IaC {\color{SlateGrey}\faCode}}
-\cvtag{Supervision {\color{SlateGrey}\faEye}}
 \cvtag{Cloud {\color{SlateGrey}\faCloud}}
 \cvtag{Infographic {\color{SlateGrey}\faPalette}}
 
