--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -56,7 +56,7 @@
 \begin{document}
 
 \name{Heuze Florent}
-\tagline{Responsable de projet en intelligence artificielle}
+\tagline{Responsable de projet Data/IA}
 \photoL{7cm}{heuzef_2025_04}
 
 \personalinfo{
@@ -91,7 +91,7 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 
 \cvsection{Qualifications}
 \cvachievement{\faGraduationCap}{Chef de projet en Intelligence Artificielle}{Datascientest, RNCP 36129 Niveau 7, 2025.\linebreak
-(Datascientist, MLOPS, Data Product Manager)}
+(Datascientist, MLOps, Data Product Manager)}
 \cvachievement{\faGraduationCap}{Gestionnaire en Maintenance et Support IT}{CESI, RNCP 34602 Niveau 5, 2015}
 \cvachievement{\faGraduationCap}{Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-Informatique, RNCP5918 Niveau 5, 2013}
 \cvachievement{\faGraduationCap}{Conseiller et Assistant en Technologies de l'Information de de la Communication}{AFPA, RNCP4537 Niveau 4, 2011}
@@ -108,32 +108,34 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 \cvsection{Compétences}
 
 \cvtag{Autonome {\color{SlateGrey}\faDove}}
-\cvtag{Motivateur {\color{SlateGrey}\faBullhorn}}\\
-\cvtag{Écoute active {\color{SlateGrey}\faAssistiveListeningSystems}}
+\cvtag{Motivateur {\color{SlateGrey}\faBullhorn}}
 \cvtag{Résilient {\color{SlateGrey}\faTree}}\\
-\cvtag{Excellence opérationnelle {\color{SlateGrey}\faCogs}}\\
+\cvtag{Excellence opérationnelle {\color{SlateGrey}\faCogs}}
+\cvtag{Pluridisciplinaire {\color{SlateGrey}\faHandshake}}\\
 \divider
 
 \cvtag{Python {\color{SlateGrey}\faPython}}
-\cvtag{MLOPS {\color{SlateGrey}\faSync*}}
-\cvtag{ETL {\color{SlateGrey}\faFileDownload}}
-\cvtag{DB {\color{SlateGrey}\faDatabase}}
+\cvtag{MLOps {\color{SlateGrey}\faSync*}}
+\cvtag{ML/DL/LLM {\color{SlateGrey}\faBrain}}
 \\
-\cvtag{Data Viz {\color{SlateGrey}\faChartPie}}
-\cvtag{Scraping / API {\color{SlateGrey}\faPlug}}
+\cvtag{(No)SQL) {\color{SlateGrey}\faDatabase}}
+\cvtag{ETL {\color{SlateGrey}\faFileDownload}}
+\cvtag{Scraping / API / MCP {\color{SlateGrey}\faPlug}}
+\cvtag{Data Viz (PowerBI, Looker Studio, Python libs){\color{SlateGrey}\faChartPie}}
 \\
 \cvtag{RGPD {\color{SlateGrey}\faGlobeEurope}}
 \cvtag{AI Act {\color{SlateGrey}\faBalanceScale}}
+\cvtag{Sécurité {\color{SlateGrey}\faShield*}}
 \\
 \cvtag{Réseaux TCP/IP {\color{SlateGrey}\faNetworkWired}}
 \cvtag{Hypervision {\color{SlateGrey}\faServer}}
-\cvtag{Git {\color{SlateGrey}\faCodeBranch}}
+\cvtag{Supervision {\color{SlateGrey}\faEye}}
 \\
 \cvtag{Conteneurisation {\color{SlateGrey}\faDocker}}
 \cvtag{Orchestration {\color{SlateGrey}\faBoxes}}
-\cvtag{Sécurité {\color{SlateGrey}\faShield*}}
+\\
+\cvtag{Git {\color{SlateGrey}\faCodeBranch}}
 \cvtag{IaC {\color{SlateGrey}\faCode}}
-\cvtag{Supervision {\color{SlateGrey}\faEye}}
 \cvtag{Cloud {\color{SlateGrey}\faCloud}}
 \cvtag{Infographie {\color{SlateGrey}\faPalette}}
 
