--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -3,6 +3,16 @@
 %\documentclass[10pt,a4paper,ragged2e,withhyper]{altacv}
 \documentclass[10pt,a4paper,ragged2e,withhyper,normalphoto]{altacv}
 
+% Overwrite AtlaCV
+\renewcommand{\cvsectionfont}{\bfseries}
+
+\newcommand{\cvcertificate}[3]{%
+  \noindent\makebox[3em][l]{\Large\color{accent}\BeginAccSupp{method=escape,ActualText={#1: }}#1\EndAccSupp{}}%
+  \bfseries\textcolor{emphasis}{#2}~\normalfont#3%
+  \\
+  \smallskip%
+}
+
 % Layout
 \geometry{left=1.25cm,right=1.25cm,top=1.5cm,bottom=1.5cm,columnsep=1.2cm}
 
@@ -35,9 +45,13 @@
 \definecolor{EgyptianBlue}{HTML}{0033AA}
 \definecolor{ForestGreen}{HTML}{228B22}
 
-\colorlet{name}{EgyptianBlue}
-\colorlet{tagline}{DodgerBlue}
-\colorlet{heading}{DodgerBlue}
+\definecolor{SafranBlue}{HTML}{003399}  % Couleur Safran
+\definecolor{DataBlue}{HTML}{0066CC}
+\definecolor{CloudGrey}{HTML}{A0A0A0}
+
+\colorlet{name}{SafranBlue}
+\colorlet{tagline}{DataBlue}
+\colorlet{heading}{SafranBlue}
 \colorlet{headingrule}{SlateGrey}
 \colorlet{subheading}{SlateGrey}
 \colorlet{accent}{SlateGrey}
@@ -56,7 +70,8 @@
 \begin{document}
 
 \name{Heuze Florent}
-\tagline{Responsable de projet Data/IA}
+\tagline{Ingénieur chef de projet Data et IA (Full-Stack)}
+
 \photoL{7cm}{heuzef_2025_04}
 
 \personalinfo{
@@ -70,8 +85,8 @@
   %\github{heuzef}
   \\ \bigskip
   \faFlag{Français (Natif)}
-  \faFlag{Anglais (B2)}
-  \faFlag{Chinois (A1)}
+  \faFlag{Anglais (Courant)}
+  \faFlag{Chinois (Débutant)}
 }
 
 \makecvheader
@@ -79,65 +94,67 @@
 \cvsection{À propos}
 \begin{quote}
 ``
-Au fil de ma carrière, j’ai souvent joué un rôle de guide, aidant à structurer et à organiser les projets. 
-
-Ma capacité à jouer un rôle de facilitateur entre différents experts me permet de créer un langage commun et d'optimiser la collaboration, contribuant ainsi à l'atteinte d'objectifs ambitieux et innovants.
-''
+Ingénieur polyvalent avec plus de 10 ans d’expérience en gestion d’infrastructure et support technique,\\ 
+réorienté vers la Data et l’IA. Certifié DataScientist et MLOps.\\
+Je combine expertise technique et gestion de projet pour concevoir et déployer des solutions \\
+data complètes (MLOps, cloud, DevOps, sécurité, ...). Passionné par l’innovation open-source, j'aide à \\piloter des projets de bout en bout en jouant un rôle de facilitateur entre différents experts.''
 \end{quote}
 
 \bigskip
 \columnratio{0.5}
 \begin{paracol}{2}
 
-\cvsection{Qualifications}
-\cvachievement{\faGraduationCap}{Chef de projet en Intelligence Artificielle}{Datascientest, RNCP 36129 Niveau 7, 2025.\linebreak
-(Datascientist, MLOps, Data Product Manager)}
-\cvachievement{\faGraduationCap}{Gestionnaire en Maintenance et Support IT}{CESI, RNCP 34602 Niveau 5, 2015}
-\cvachievement{\faGraduationCap}{Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-Informatique, RNCP5918 Niveau 5, 2013}
-\cvachievement{\faGraduationCap}{Conseiller et Assistant en Technologies de l'Information de de la Communication}{AFPA, RNCP4537 Niveau 4, 2011}
+\cvsection{Formations}
+\cvachievement{\faCaretRight}{Chef de projet en Intelligence Artificielle}{Datascientest/Mines Paris, RNCP 36129 Niveau 7, 2025.\linebreak
+DataScientist/MLOps/Data Product Manager}
+\cvachievement{\faCaretRight}{Gestionnaire en Maintenance et \linebreak Support Informatique}{CESI, RNCP 34602 Niveau 5, 2015}
+\cvachievement{\faCaretRight}{Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-Informatique, RNCP5918 Niveau 5, 2013}
+\cvachievement{\faCaretRight}{Conseiller et Assistant en Technologies de l'Information de de la Communication}{AFPA, RNCP4537 Niveau 4, 2011}
 
-\divider
+\cvsection{Certifications}
 
-\cvachievement{\faCertificate}{Dataiku MLOps Practitioner Certificate}{Dataiku, 2025}
-\cvachievement{\faCertificate}{AWS Certified Cloud Practitioner}{AWS, 2025}
-\cvachievement{\faCertificate}{OpenCV Bootcamp}{OpenCV University, 2024}
-\cvachievement{\faCertificate}{Chinois A1}{CCI Cognac, 2023}
-\cvachievement{\faCertificate}{CISCO CCNA1}{CISCO, 2013}
-\cvachievement{\faCertificate}{Designer Graphiste}{Lignes et Formations, 2011}
+{\faCaretRight}{Dataiku MLOps Practitioner Certificate}{ - 2025}\\
+{\faCaretRight}{AWS Certified Cloud Practitioner}{ - 2025}\\
+{\faCaretRight}{OpenCV University Bootcamp}{ - 2024}\\
+%{\faCaretRight}{Chinois A1}{ - 2023}\\
+{\faCaretRight}{CISCO CCNA1}{ - 2013}\\
+%{\faCaretRight}{Designer Graphiste Lignes et Formations}{ - 2011}\\
 
 \cvsection{Compétences}
 
 \cvtag{Autonome {\color{SlateGrey}\faDove}}
-\cvtag{Motivateur {\color{SlateGrey}\faBullhorn}}
+\cvtag{Moteur {\color{SlateGrey}\faBullhorn}}
 \cvtag{Résilient {\color{SlateGrey}\faTree}}\\
 \cvtag{Excellence opérationnelle {\color{SlateGrey}\faCogs}}
-\cvtag{Pluridisciplinaire {\color{SlateGrey}\faHandshake}}\\
+\cvtag{Pluridisciplinaire {\color{SlateGrey}\faHandshake}}
 \divider
-
-\cvtag{Python {\color{SlateGrey}\faPython}}
+\\
 \cvtag{MLOps {\color{SlateGrey}\faSync*}}
 \cvtag{ML/DL/LLM {\color{SlateGrey}\faBrain}}
+\cvtag{Python {\color{SlateGrey}\faPython}}
 \\
 \cvtag{(No)SQL) {\color{SlateGrey}\faDatabase}}
 \cvtag{ETL {\color{SlateGrey}\faFileDownload}}
-\cvtag{Scraping / API / MCP {\color{SlateGrey}\faPlug}}
+\cvtag{API / MCP / Scraping {\color{SlateGrey}\faPlug}}
 \cvtag{Data Viz (PowerBI, Looker Studio, Python libs){\color{SlateGrey}\faChartPie}}
-\\
-\cvtag{RGPD {\color{SlateGrey}\faGlobeEurope}}
-\cvtag{AI Act {\color{SlateGrey}\faBalanceScale}}
-\cvtag{Sécurité {\color{SlateGrey}\faShield*}}
-\\
-\cvtag{Réseaux TCP/IP {\color{SlateGrey}\faNetworkWired}}
-\cvtag{Hypervision {\color{SlateGrey}\faServer}}
-\cvtag{Supervision {\color{SlateGrey}\faEye}}
-\\
+
 \cvtag{Conteneurisation {\color{SlateGrey}\faDocker}}
 \cvtag{Orchestration {\color{SlateGrey}\faBoxes}}
 \\
 \cvtag{Git {\color{SlateGrey}\faCodeBranch}}
 \cvtag{IaC {\color{SlateGrey}\faCode}}
 \cvtag{Cloud {\color{SlateGrey}\faCloud}}
-\cvtag{Infographie {\color{SlateGrey}\faPalette}}
+
+\cvtag{RGPD {\color{SlateGrey}\faGlobeEurope}}
+\cvtag{Conformité {\color{SlateGrey}\faBalanceScale}}
+\cvtag{Sécurité {\color{SlateGrey}\faShield*}}
+\\
+\cvtag{Réseaux TCP/IP {\color{SlateGrey}\faNetworkWired}}
+\cvtag{Hypervision {\color{SlateGrey}\faServer}}
+\cvtag{Supervision {\color{SlateGrey}\faEye}}
+
+\textit{Centre d'intérêts :}\\
+{\faUserNinja} Aïkido {\faServer} Auto-hébergement {\faLinux} Logiciels Libre\\
 
 \switchcolumn
 
@@ -146,39 +163,42 @@ Ma capacité à jouer un rôle de facilitateur entre différents experts me perm
 \begin{itemize}
 \item ESN spécialisée en sécurité et en logiciels libres.
 \item Administration et supervision des infrastructures IT.
-\item Maintenance d’une dizaine de parcs informatiques.
-\item Maintenance en salle serveur et ZRR.
-\item Assistance et formations proactives auprès des clients.
-\item Rédaction de rapports et documentations technique.
-\item Optimisation continue des procédures internes.
+\item Gestion d’une dizaine de parcs informatiques.
+\item Maintenances en salle serveur et ZRR.
+\item Formations proactives auprès des clients.
+\item Rédaction de documentations technique.
+\item Contrôles et optimisations des Backups.
+\item Sécurisation des données sensibles.
 \item Analyses fonctionnelles des besoins et RCA.
-\item Accompagnement des équipes.
-\item Résolution des situations de crise et d’urgence.
+\item Gestions d'équipe en méthode agile.
+\item Résolutions des situations de crise et d’urgence.
 \end{itemize}
 \divider
 \cvevent{Freelance}{}{2012 -- 2016}{Télétravail}
-\begin{itemize}
-\item Services IT. Développement web et graphisme.
-\end{itemize}
+%\begin{itemize}
+%\item Services IT. Développement web et graphisme.
+%\end{itemize}
 \divider
 \cvevent{Responsable SI - CEMÉA Aquitaine}{}{2011}{Télétravail}
-\begin{itemize}
-\item Technicien et animateur en Service Civique.
-\end{itemize}
+%\begin{itemize}
+%\item Technicien et animateur en Service Civique.
+%\end{itemize}
 
-\cvsection{Projets}
-{\faRobot}{Invention du Caligraphomate (HACK1ROBO 2025)}\\
+\cvsection{Projets réalisés}
+{\faRobot}{Invention d'un bras robotique piloté par IA\\
+\textit{HACK1ROBO, 2025}}\\
 {\faChartLine}{Amélioration dispositif Cartofriches pour le CEREMA}\\
-{\faCogs}{Mise en production d'un modèle d'IA (paris sportif)}\\
-{\faEye}{Conception modèle CNN (reconnaissance champignons)}\\
-{\faMedkit}{Parkinson Stress Shield (Datathon Dijon 2025)}\\
-{\faLightbulb}{Fondation du Fab-Lab de la ville de Cognac}\\
-{\faFlask}{Startup Weekend Bordeaux 2012, 2013, 2015, 2017}\\
-{\faHandHoldingHeart}{Création d'associations pour l'inclusion/solidarité}
-
-\divider
-
-Intérêts : {\faUserNinja} Aïkido {\faServer} Auto-hébergement {\faLinux} Libre\\
+{\faCogs}{Mise en production d'un modèle d'IA}\\
+\textit{Déploiement MLOPS end-to-end pour du paris sportif}\\
+{\faEye}{Conception modèle CNN}\\
+\textit{Application de reconaissance de champignions}\\
+{\faMedkit}{Conception détecteur médicale à base d'IA}\\
+\textit{Parkinson Stress Shield, Datathon Dijon 2025}\\
+{\faLightbulb}{Fondation d'un FabLab}\\
+\textit{Cognhacker, dans la ville de Cognac}\\
+{\faFlask}{Startup Weekend Bordeaux}\\
+\textit{Projets gagnants des éditions 2012, 2013 et 2017}\\
+%{\faHandHoldingHeart}{Création d'associations pour l'inclusion/solidarité}
 
 \raggedleft
 \bigskip
